# LiveLinkVRCFaceTracking

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
docs/: DESIGN.md
src/: gui.rs  livelink.rs  main.rs  mapping.rs  osc.rs  state.rs
tests/: integration.rs
