[package]
name = "livelink-vrcft"
version = "0.1.0"
edition = "2024"
description = "Lightweight LiveLink Face to VRChat OSC bridge"
license = "MIT"

[features]
default = []
gui = ["dep:eframe"]

[dependencies]
rosc = "0.11"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
ctrlc = "3"
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
